resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-9.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::StructUnnamedUdtTest2 {
  /* 0x0000 */ uint64_t Before;
  union {
    struct {
      /* 0x0008 */ uint64_t u1;
      /* 0x0010 */ uint64_t u2;
    };
    struct {
      /* 0x0008 */ uint64_t* p1;
      /* 0x0010 */ uint64_t* p2;
    };
  };
  /* 0x0018 */ uint64_t Middle;
  union {
    /* 0x0020 */ uint64_t u3;
    /* 0x0020 */ uint64_t* p3;
  };
  /* 0x0028 */ uint64_t After;
};
