resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-0.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::PrimitiveTypesTest { /* Size=0x70 */
  /* 0x0000 */ bool b1;
  /* 0x0001 */ char c1;
  /* 0x0002 */ unsigned char c2;
  /* 0x0003 */ char8_t c3;
  /* 0x0004 */ char16_t c4;
  /* 0x0008 */ char32_t c5;
  /* 0x000c */ wchar_t w1;
  /* 0x000e */ uint16_t i1;
  /* 0x0010 */ int16_t i2;
  /* 0x0014 */ uint32_t i3;
  /* 0x0018 */ int32_t i4;
  /* 0x001c */ uint32_t i5;
  /* 0x0020 */ int32_t i6;
  /* 0x0028 */ uint64_t i7;
  /* 0x0030 */ int64_t i8;
  /* 0x0038 */ uint64_t i9;
  /* 0x0040 */ int64_t i10;
  /* 0x0048 */ float f1;
  /* 0x0050 */ double f2;
  /* 0x0058 */ double f3;
  /* 0x0060 */ double f4;
  /* 0x0068 */ int32_t hres;
};
