resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-11.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
union resym_test::UnionUnnamedUdtTest1 { /* Size=0x70 */
  struct {
    /* 0x0000 */ uint32_t i1;
    /* 0x0004 */ uint32_t i2;
  };
  /* 0x0000 */ resym_test::PrimitiveTypesTest s1;
  /* 0x0000 */ uint64_t QuadPart;
  struct {
    /* 0x0000 */ uint32_t i11;
    /* 0x0004 */ uint32_t i22;
  };
};
